--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "webpack --progress --colors --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,22 @@
   },
   "homepage": "https://github.com/ant-nomad/harvester#readme",
   "devDependencies": {
-    "electron": "^1.4.14"
+    "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.10",
+    "babel-register": "^6.18.0",
+    "electron": "^1.4.14",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-notifier": "^1.5.0"
+  },
+  "dependencies": {
+    "babel-core": "^6.21.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
