--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "build": "webpack --progress --colors --config webpack.config.js"
+    "build": "webpack --progress --colors --config webpack.config.js",
+    "webpack-devserver": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
+    "web": "babel-node ./scripts/server.js --presets es2015,stage-0"
   },
   "repository": {
     "type": "git",
@@ -32,13 +34,16 @@
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "babel-core": "^6.21.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "express": "^4.14.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "request": "^2.79.0"
   }
 }
