--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 .idea/uiDesigner.xml
 .idea/misc.xml
 .idea/encodings.xml
+.idea/harvester.iml
+.idea/jsLibraryMappings.xml
+.idea/modules.xml
+.idea/vcs.xml
 
 # Gradle:
 .idea/gradle.xml
