--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "electron .",
     "build": "webpack --progress --colors --config webpack.config.js",
     "webpack-devserver": "webpack-dev-server --debug --hot --devtool eval-source-map --watch-poll --colors --inline --port 8050 --host 0.0.0.0",
-    "web": "babel-node ./scripts/server.js --presets es2015,stage-0"
+    "web": "babel-node ./scripts/test_server.js --presets es2015,stage-0"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "express": "^4.14.0",
     "oboe": "^2.1.3",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "request": "^2.79.0",
     "whatwg-fetch": "^2.0.2"
